PositFFT/logs/hls_run_csim_14256.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/PositFFT 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=C:\Users\Burak\Desktop\TAU\HLS\PositFFT\PositFFT\posit.hpp' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/posit.hpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=C:\Users\Burak\Desktop\TAU\HLS\PositFFT\PositFFT\posit_lib.cpp' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/posit_lib.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=posit_fft_test.cpp' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(12)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/posit_fft_test.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=dIFFT' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xazu7ev-fbvb900-1-i' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xazu7ev-fbvb900-1-i'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(11)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=0' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(9)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/Burak/Desktop/TAU/HLS/PositFFT/PositFFT/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../posit_fft_test.cpp in debug mode
csim.mk:88: recipe for target 'obj/posit_fft_test.o' failed
In file included from ../../../../posit_fft_test.cpp:1:
In file included from ../../../../posit.hpp:1:
In file included from C:/Xilinx/Vitis/2024.2/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../posit_fft_test.cpp:413:38: error: use of undeclared identifier 'd_IMG_Array'; did you mean 'd_RP_Array'?
    double snrPosit_IMG = computeSNR(d_IMG_Array, p_IMG_Array, MAX_SIZE);
                                     ^~~~~~~~~~~
                                     d_RP_Array
../../../../posit.hpp:279:15: note: 'd_RP_Array' declared here
extern double d_RP_Array[MAX_SIZE];   
              ^
../../../../posit_fft_test.cpp:413:51: error: use of undeclared identifier 'p_IMG_Array'; did you mean 'p_RP_Array'?
    double snrPosit_IMG = computeSNR(d_IMG_Array, p_IMG_Array, MAX_SIZE);
                                                  ^~~~~~~~~~~
                                                  p_RP_Array
../../../../posit.hpp:283:15: note: 'p_RP_Array' declared here
extern double p_RP_Array[MAX_SIZE];   
              ^
../../../../posit_fft_test.cpp:414:43: error: use of undeclared identifier 'd_IMG_Array'; did you mean 'd_RP_Array'?
    double snrFloat_IMG = computeSNRFloat(d_IMG_Array, f_IMG_Array, MAX_SIZE);
                                          ^~~~~~~~~~~
                                          d_RP_Array
../../../../posit.hpp:279:15: note: 'd_RP_Array' declared here
extern double d_RP_Array[MAX_SIZE];   
              ^
../../../../posit_fft_test.cpp:414:56: error: use of undeclared identifier 'f_IMG_Array'; did you mean 'f_RP_Array'?
    double snrFloat_IMG = computeSNRFloat(d_IMG_Array, f_IMG_Array, MAX_SIZE);
                                                       ^~~~~~~~~~~
                                                       f_RP_Array
../../../../posit.hpp:281:14: note: 'f_RP_Array' declared here
extern float f_RP_Array[MAX_SIZE];   
             ^
../../../../posit_fft_test.cpp:418:26: error: use of undeclared identifier 'd_IMG_Array'; did you mean 'd_RP_Array'?
    writeToFile(IMGFile, d_IMG_Array, MAX_SIZE);        // For signalArray
                         ^~~~~~~~~~~
                         d_RP_Array
../../../../posit.hpp:279:15: note: 'd_RP_Array' declared here
extern double d_RP_Array[MAX_SIZE];   
              ^
../../../../posit_fft_test.cpp:419:32: error: use of undeclared identifier 'f_IMG_Array'; did you mean 'f_RP_Array'?
    writeToFileFloat(fIMGFile, f_IMG_Array, MAX_SIZE);       // For real part of float FFT result
                               ^~~~~~~~~~~
                               f_RP_Array
../../../../posit.hpp:281:14: note: 'f_RP_Array' declared here
extern float f_RP_Array[MAX_SIZE];   
             ^
../../../../posit_fft_test.cpp:420:27: error: use of undeclared identifier 'p_IMG_Array'; did you mean 'p_RP_Array'?
    writeToFile(pIMGFile, p_IMG_Array, MAX_SIZE);       // For real part of posit FFT result
                          ^~~~~~~~~~~
                          p_RP_Array
../../../../posit.hpp:283:15: note: 'p_RP_Array' declared here
extern double p_RP_Array[MAX_SIZE];   
              ^
1 warning and 7 errors generated.
make: *** [obj/posit_fft_test.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 0 seconds. Total elapsed time: 15.866 seconds; peak allocated memory: 154.566 MB.
